--- a/Desenvolvimento WEB/WebAPP/src/app/components/dashboard/dashboard.component.html
+++ b/Desenvolvimento WEB/WebAPP/src/app/components/dashboard/dashboard.component.html
@@ -5,7 +5,7 @@
         <h5 class="card-title">Despesas</h5>
         <h6 class="card-subtitle mb-2">Total geral em aberto</h6>
         <p class="card-text">R$
-          <strong class="valor-total">{{ dashboardResumo?.DespesasAberto || '0,00' }}</strong>
+          <strong class="valor-total">{{ resumo?.dashboardResumo?.DespesasAberto || '0,00' }}</strong>
         </p>
       </div>
     </div>
@@ -16,7 +16,7 @@
         <h5 class="card-title">Receitas</h5>
         <h6 class="card-subtitle mb-2">Total geral em aberto</h6>
         <p class="card-text">R$
-          <strong class="valor-total">{{ dashboardResumo?.ReceitasAberto || '0,00' }}</strong>
+          <strong class="valor-total">{{ resumo?.dashboardResumo?.ReceitasAberto || '0,00' }}</strong>
         </p>
       </div>
     </div>
@@ -27,7 +27,7 @@
         <h5 class="card-title">Saldo</h5>
         <h6 class="card-subtitle mb-2">Total geral nas contas</h6>
         <p class="card-text">R$
-          <strong class="valor-total">{{ dashboardResumo?.SaldoContas || '0,00' }}</strong>
+          <strong class="valor-total">{{ resumo?.dashboardResumo?.SaldoContas || '0,00' }}</strong>
         </p>
       </div>
     </div>
@@ -38,10 +38,13 @@
         <h5 class="card-title">Previsão</h5>
         <h6 class="card-subtitle mb-2">Previsto no final do mês</h6>
         <p class="card-text">R$
-          <strong class="valor-total">{{ dashboardResumo?.Previsao || '0,00' }}</strong>
+          <strong class="valor-total">{{ resumo?.dashboardResumo?.Previsao || '0,00' }}</strong>
         </p>
       </div>
     </div>
   </div>
 </div>
 <!--  -->
+<div style="display: block">
+  <canvas baseChart [data]="doughnutChartData || [0]" [labels]="doughnutChartLabels || [''] " [chartType]="doughnutChartType"></canvas>
+</div>
