--- a/Desenvolvimento WEB/WebAPP/src/app/components/dashboard/dashboard.component.html
+++ b/Desenvolvimento WEB/WebAPP/src/app/components/dashboard/dashboard.component.html
@@ -46,5 +46,5 @@
 </div>
 <!--  -->
 <div style="display: block">
-  <canvas baseChart [data]="doughnutChartData || [0]" [labels]="doughnutChartLabels || [''] " [chartType]="doughnutChartType"></canvas>
+  <canvas baseChart [data]="doughnutChartData" [labels]="doughnutChartLabels" [chartType]="doughnutChartType"></canvas>
 </div>
