--- a/Desenvolvimento WEB/WebAPP/src/app/app.component.html
+++ b/Desenvolvimento WEB/WebAPP/src/app/app.component.html
@@ -1,16 +1,16 @@
-<nav class="navbar navbar-dark sticky-top bg-dark flex-md-nowrap p-0">
+<nav *ngIf="!paginaInteira" class="navbar navbar-dark sticky-top bg-dark flex-md-nowrap p-0">
   <a class="navbar-brand col-sm-3 col-md-2 mr-0" href="#">{{ nomeAplicativo }}</a>
   <input class="form-control form-control-dark w-100" type="text" placeholder="Search" aria-label="Search">
   <ul class="navbar-nav px-3">
     <li class="nav-item text-nowrap">
-      <a class="nav-link" href="#">Sign out</a>
+      <a (click)="sair($event)" class="nav-link" href="#">Sair</a>
     </li>
   </ul>
 </nav>
 
-<div class="container-fluid">
-  <div class="row">
-    <nav class="col-md-2 d-none d-md-block bg-light sidebar">
+<div [ngClass]="{ 'container-fluid' : !paginaInteira }">
+  <div [ngClass]="{ 'row' : !paginaInteira }">
+    <nav *ngIf="!paginaInteira" class="col-md-2 d-none d-md-block bg-light sidebar">
       <div class="sidebar-sticky">
         <ul class="nav flex-column">
           <li *ngFor="let item of listaNavegacao" class="nav-item">
@@ -23,8 +23,8 @@
       </div>
     </nav>
 
-    <main role="main" class="col-md-9 ml-sm-auto col-lg-10 pt-3 px-4">
-      <div class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pb-2 mb-3 border-bottom">
+    <main role="main" [ngClass]="{ 'col-md-9 ml-sm-auto col-lg-10 pt-3 px-4' : !paginaInteira }">
+      <div *ngIf="!paginaInteira" class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pb-2 mb-3 border-bottom">
         <h1 class="h2">{{ navegacaoAtual || 'Dashboard '}}</h1>
         <div class="btn-toolbar mb-2 mb-md-0">
           <h1 class="h4 mes-atual">{{ mesAnoAtual?.Descricao || '--/--/--' }}</h1>
